--- a/hash_tab/hash_tab/hash_tab.vcxproj
+++ b/hash_tab/hash_tab/hash_tab.vcxproj
@@ -65,7 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="hash_tab.cpp" />
+    <ClCompile Include="tab.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="test.cpp" />
